<resources>

    <string name="app_name">StepsCounter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="z_axis">Z-Axis</string>
    <string name="y_axis">Y-Axis</string>
    <string name="x_axis">X-Axis</string>
    <string name="shaker_demo">Shaker Demo</string>
    <string name="start_button">Start Recording</string>
    <string name="pause_button">Pause Recording</string>
    <string name="l_accel">accelerometer</string>
    <string name="l_gyroscope">gyroscope</string>
    

</resources>